--- a/3/index.html
+++ b/3/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2</title>
+    <title>3</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-    <div id="red"></div>
-    <div id="green"></div>
+    <div id="stampa">
+        
+    </div>
     
 
     <script src="js/script.js"></script>
